2005-03-11 Sivaiah Nallagatla <snallagatla@novell.com>
                                                                                           
        * calendar/e-cal-backend-exchange-calendar.c
        (add_timezone_cb) (modify_object_with_href) :
        initialize the izone to NULL before passing it
        to get_timzone.
                                                                                           
        Fixes #73505, #67740  and surely something else

2005-03-07  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #72889, #72943 and probably others.

	* camel/camel-exchange-store.c (exchange_disconnect): Removed the
	logic, put it into finalize() instead. Simply return TRUE here.
	(exchange_connect): Moved the logic into construct().
	(construct): Init the strub and connect it. This needs to happen
	here or offline mode breaks.

2005-03-10 Sivaiah Nallagatla <snallagatla@novell.com>

	* calendar/backends/e-cal-backend-exchange.c
	(remove_objects) : Make sure object is non NULL before deferencing
	it.  Fixes #73059

2005-03-10  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange-tasks.c (create_task_object):
	Finding the UID from the ical component and using it while checking
	the cache, and also returning the UID back. Fixes #72041
	Changed the parameter name from comp_uid to return_uid.

	* calendar/e-cal-backend-exchange-calendar.c (create_object): Similar
	to tasks, here also reading the UID value from ical component and 
	returning it back.

2005-03-09 Sivaiah Nallagatla <snallagatla@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_get_contact_list) : 
	Don't free the vcard you just added to list !!!
	That gets freed elsewhere.
	Fixes #73470, #73030 #73025 and may be something 
	else which i don't know

2005-03-09 Sivaiah Nallagatla <snallagatla@novell.com>

        * addresbook/e-book-backend-exchange.c
        (build_message) : make sure note is non NULL